Changelog
=========

6.0-dev0 - (2019-03-16)
-----------------------
* Feature: Plone 5 support
  [avoinea]

5.5 - (2019-01-28)
---------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

5.4 - (2018-03-14)
------------------
* Change: reference js code within jQuery dom ready
  [ichim-david refs #91577]

5.3 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]
* Feature: Make it work with eea.facetednavigation 10.0+
  [avoinea refs #89955]

5.2 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

5.1 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

5.0 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

4.9 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

4.8 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

4.7 - (2015-01-21)
------------------
* Bug fix: Fixed url within setup.py in order to work with newer setuptools versions
  [voineali refs #21705]

4.6 - (2014-01-21)
------------------
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Bug fix: Updated old URLs pointing Trac
  [ghicaale refs #18003]

4.5 - (2013-03-15)
------------------
* Bug fix: 'Below' is now spelled properly.
  [prospchr refs #13770]

4.4 - (2012-11-22)
------------------